# pdoflow

./: .coveragerc  .pre-commit-config.yaml  CLAUDE.md  CLI_TEST_SUMMARY.md  COVERAGE.md  Dockerfile  README.md  cli_coverage_analysis.md  coverage.json  docker-compose.yml  mypy.ini  noxfile.py  pr_description.md  pyproject.toml  sitecustomize.py  tox.ini
.github/workflows/: README.md  coverage.yml  dependency-check.yml  master-release.yml  release.yml  scheduled-tests.yml  staging-release.yml  test.yml  version-bump.yml
docs/source/: conf.py  index.rst
docs/source/developer/: architecture.rst  contributing.rst  index.rst  testing.rst
examples/: priority_demo.py  shared_variables_example.py
pdoflow/: cli.py  cluster.py  io.py  models.py  registry.py  status.py  utils.py
src/pdoflow/: __init__.py  cli.py  cluster.py  io.py  models.py  registry.py  shared_vars.py  status.py  utils.py
tests/: conftest.py  coverage_init.py  reference_file.py  strategies.py  test_cli.py  test_cli_helpers.py  test_failures.py  test_invocation.py  test_model_attributes.py  test_priority.py  test_profiling.py  test_shared_vars.py  utils.py
tests/cluster/: __init__.py  conftest.py  test_cluster_pool.py  test_cluster_process.py  test_failure_cache.py  test_integration.py  test_job_decorator.py  test_poll_functions.py
tests/example_package/: __init__.py
